# nen-emulator

./: .gitignore  Cargo.toml  Cargo_tmp.toml  Makefile  README.md  TODO.md  index.html  index.mjs  my.patch  save.tmp
frontend-eframe/: .gitignore  Cargo.toml  TODO-GUI.md
frontend-eframe/src/: main.rs
frontend-native/: .gitignore  Cargo.toml
frontend-native/src/: main.rs
frontend-sdl2/: Cargo.toml
frontend-sdl2/src/: main.rs
frontend-wasm/: Makefile  audioWorker.js  index.html  index.mjs
frontend-wasm/pkg/: nen_emulator.js  nen_emulator_bg.wasm
nenemu_core/: Cargo.toml
nenemu_core/db_tests/: nes20db.bitcode  nes20db.json.bitcode  nes20db.json.bitcode.gzip
nenemu_core/src/: apu.rs  bus.rs  cpu.rs  emu.rs  games_db.rs  lib.rs  mapper.rs  ppu.rs  ppu_old.rs  rom.rs
nenemu_core/src/mapper/: fds.rs  konami.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc5 copy.rs  mmc5.rs  mmc5_old.rs  namco.rs  sunsoft.rs
nenemu_core/tests/: cpu.rs  games_db.rs  nestest.rs
nenemu_core/utils/: 6502_instr_json_gen.mjs  nes20db.bitcode.gzip  optable_generator.mjs
nenemu_eframe/: Cargo.toml  README.md  index.html
nenemu_eframe/src/: main.rs  main_old.rs
nenemu_sdl2/: Cargo.toml  build.rs
nenemu_sdl2/src/: main.rs  main_tmp.rs
nenemu_sdl3/: Cargo.toml
nenemu_sdl3/src/: main.rs
nenemu_wasm/: Cargo.toml  README.md  index.html  index.mjs
nenemu_wasm/src/: lib.rs
src/: addr.rs  apu.rs  banks.rs  blip.rs  bus.rs  cart.rs  cpu.rs  dev.rs  disk.rs  dma.rs  emu.rs  fds.rs  frame.rs  frame_old.rs  games_db.rs  instr.rs  joypad.rs  lib.rs  main.rs  mapper.rs  mapper_old.rs  mem.rs  mmu.rs  nes.rs  ppu.rs  ppu_bak.rs  ppu_old.rs  ppu_tmp.rs  render.rs  renderer.rs  rom.rs  sdl2ctx.rs  tile.rs  ui.rs  wasm.rs
src/apu/: dmc.rs  envelope.rs  noise.rs  pulse.rs  triangle.rs
src/emu/: bus.rs  cart.rs  cpu.rs  instr.rs  instructions.rs  mem.rs  mod.rs  ppu.rs  ui.rs
src/lib/: cpu.rs  instructions.rs  mod.rs  ui.rs
src/mapper/: axrom.rs  bandai_fcg.rs  colordreams.rs  fds.rs  gtrom.rs  gxrom.rs  inesmapper3.rs  inesmapper71.rs  jy_company.rs  jy_company_clone.rs  konami.rs  konami_irq.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc5.rs  namco129_163.rs  nrom.rs  sunsoft4.rs  sunsoft_fme_7.rs  unrom512.rs  uxrom.rs  vrc2_4.rs  vrc3.rs  vrc4.rs  vrc6.rs  vrc7.rs
src/mapper_old/: axrom.rs  gxrom.rs  inesmapper3.rs  inesmapper71.rs  mmc1.rs  mmc3.rs  nrom.rs  rambo1.rs  uxrom.rs  vrc2_4.rs
src/ppu/: frame.rs  render.rs  render_old.rs
tests/: TESTS_COVERAGE.md  cart_test.rs  cpu.rs  cpu_test.rs  games_db.rs  mod.rs  nestest.rs  palettes.rs  patterns_test.rs  ppu_test.rs  single_step_tests.rs  snake_test.rs  test_coverage.md
tests/nes_test/: mod.rs
tests/nestest/: mod.rs
tests/single_step_tests/: .gitignore  cpu_test.rs  mod.rs
tests/snake_test/: mod.rs
tmp/src/: apu.rs  emu.rs  games_db.rs  mapper.rs  ppu.rs  rom.rs
tmp/src/mapper/: konami.rs  mmc5.rs
utils/: 6502_instructions.json  decoder.mjs  instructions.json  mapper.mjs  mapper2.mjs  nes20db.bitcode.gzip  nes_games_db.bitcode.gzip  nestest_strip.mjs
www/: index.html  index.mjs
