[workspace]
members = ["nenemu_core", "nenemu_sdl2", "nenemu_sdl3", "nenemu_eframe"]
default-members = ["nenemu_core", "nenemu_eframe"]

resolver = "3"

[workspace.package]
# here keys that the memebrs inherit

[profile.release-opt]
inherits = "release"
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = true
