[package]
name = "nenemu_core"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde", "dep:typetag", "dep:serde-big-array", "dep:pot"]

[dependencies]
bitfields = "3.0.0"
bitflags = { version = "2.12.1", features = ["serde"] }
# used for parsing games db
bitcode = { version = "0.6.9" }
# used for decompressing games db
flate2 = "1.1.9"
# sha1_smol = "1.0.1"
# used for hashing roms to query games db
crc32fast = "1.5.0"
# used for random ram at init
getrandom = "0.4.2"
zip = "8.6.0"

serde = { version = "1.0.228", features = ["derive"], optional = true }
typetag = { version = "0.2.22", optional = true }
serde-big-array = { version = "0.5.1", optional = true }
pot = { version = "3.0.1", optional = true }

[dev-dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bitcode = { version = "0.6.6", features = ["serde"] }
ciborium = "0.2.2"
flate2 = "1.1.2"
pretty_assertions = "1.4.1"
rmp-serde = "1.3.0"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
