[package]
name = "nenemu_eframe"
version = "0.1.0"
edition = "2024"

[features]
savestates = ["nenemu_core/savestates"]
persistence = ["savestates", "serde", "eframe/persistence", "gilrs/serde-serialize"]
opengl = ["eframe/glow"]

[dependencies]
rfd = { version = "0.17.2" }
eframe = { version = "0.34.3", features = ["persistence"] }
nenemu_core = { path = "../nenemu_core" }
# sdl2 = "0.38.0"
cpal = { version = "0.18.1" }
serde = { version = "1.0.228", optional = true }
gilrs = { version = "0.11.2", default-features = false, features = ["xinput"]}
